--- a/Task1/Task1.vcxproj
+++ b/Task1/Task1.vcxproj
@@ -158,11 +158,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="load_gdi_bitmap.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="task1.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="load_gdi_bitmap.cpp" />
     <ClCompile Include="task1.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -172,9 +174,6 @@
     <Image Include="small.ico" />
     <Image Include="space.jpeg" />
     <Image Include="Task1.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="jpeg2.bin" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
